2002-11-30  Jody Goldberg <jody@gnome.org>

	* src/expr-name.c (cb_check_name) : ignore hidden names.

	* src/io-context-gtk.c (icg_error_error_info) : no need to display the
	  splash if we ar egoing to pop up an error.  Something was screwing
	  up and I don't feel like tracing it.

	* src/expr.c (do_referenced_sheets) : fix nasty typo.
	(gnm_expr_containts_subtotal) : new.

	* src/collect.c (collect_floats) : start support for SUBTOTAL
	* src/sheet.c (sheet_foreach_cell_in_range) : ditto.
	* src/func.c (function_iterate_argument_values) : ditto.

2002-11-29  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (wbcg_menu_state_update) : add auto
	  filter.
	(cb_auto_filter) : initial quicky implementation.
	(cb_data_pivottable) : ditto.
	(workbook_control_gui_init) : init the autofilter.

	* src/value.c (value_equal) : new util.
	(value_cmp) : new.

	* src/style-color.c (gnumeric_color_init) : add green.

	* src/stf.c : quiet a few warnings.

	* src/sheet.c (sheet_new) : init filters and pivots.
	(sheet_destroy_contents) : free the filters and pivots.
	(sheet_range_calc_spans) : no one sets NO_DRAW so don't check for it.
	(sheet_cell_calc_span) : ditto.

	* src/sheet-view.c (sv_edit_pos_in_filter) : new.

	* src/sheet-object.c (sheet_object_print) : no warning if the object
	  does not print.
	(sheet_object_clone) : nor is it a problem if it can not be cloned.

	* src/sheet-object-widget.c (sheet_widget_button_set_label) : new.
	(sheet_widget_checkbox_set_label) : new.
	(cb_checkbox_config_cancel_clicked) :use sheet_widget_checkbox_set_label
	(cb_checkbox_label_changed) : ditto.
	(sheet_widget_radio_button_finalize) : free the label.
	(sheet_widget_radio_button_set_label) : new.

	* src/ranges.c (setup_range_from_value) : remove ugly release argument.
	(setup_range_from_range_ref) : ditto.
	(value_to_global_range) : take a GlobalRange as an arg.  No need to
	  allocate the result.

	* src/item-bar.c (item_bar_realize) : create a GC for filtered regions